[package]
name = "skia-canvas"
version = "1.2.0-mp"
description = "A canvas environment for Node"
authors = ["Christian Swinehart <drafting@samizdat.co>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"

[features]
metal = ["skia-safe/metal", "dep:metal", "dep:core-graphics-types", "dep:foreign-types", "dep:cocoa", "dep:objc"]
vulkan = ["skia-safe/vulkan", "dep:skulpin", "dep:ash"]
window = ["dep:winit"]

[dependencies]
crc = "^3.0"
css-color = "^0.2"
rayon = "^1.5"
crossbeam = "0.8.2"
once_cell = "1.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skia-safe = { version = "0.78.2", features = ["textlayout", "svg", "webp"] }

# vulkan
ash = { version = "0.37", optional = true }
skulpin = { git = "https://github.com/aclysma/skulpin.git", rev = "ce4f35d", default-features = false, features = ["skia-complete"], optional = true }

# metal
metal = { version = "0.24", optional = true }
core-graphics-types = { version = "0.1.1", optional = true }
foreign-types = { version = "0.3.2", optional = true }
cocoa = { version = "0.26.0", optional = true }
objc = { version = "0.2.7", optional = true }

# window
winit = { version = '0.26.1', features = ["serde"], optional = true }

[target.'cfg(windows)'.dependencies]
allsorts = { version = "0.15", features = ["flate2_zlib"], default-features = false}

[dependencies.neon]
version = "1.0"
features = ["napi-6"]

[patch."https://github.com/aclysma/skulpin"]
skulpin = { git = "https://github.com/mpaperno/skulpin.git", branch = "mp/v0.15.0" }
